<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="240dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_Headline"
            android:fontFamily="@font/poppins_bold"
            android:textSize="25sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_SubHead"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"/>
        
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="20dp"
            android:hint="@string/Login_Username"
            android:fontFamily="@font/poppins"
            android:textSize="17sp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="20dp"
            android:hint="@string/Login_Password"
            android:fontFamily="@font/poppins"
            android:textSize="17sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:text="@string/Login_btnlogin"
            android:backgroundTint="#0062FF"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            app:cornerRadius="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_forgot_password"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"/>

        <Button
            android:id="@+id/btn_createAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_blue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:text="@string/Login_create_an_account"
            android:textColor="@color/primary_blue"
            android:textAllCaps="false"
            app:cornerRadius="10dp"/>

    </LinearLayout>

</RelativeLayout>