<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/testing02">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/Main_Headline"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/Main_subHeadline"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_getStarted"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="45dp"
            android:backgroundTint="#0062FF"
            android:fontFamily="@font/poppins"
            android:text="@string/Main_get_started"
            android:textAllCaps="false"
            app:cornerRadius="10dp" />

    </LinearLayout>

</RelativeLayout>
    
    
    
    
    
